#18424 closed bug (fixed)

PoorMan Problem with charset!

Reported by: mrfx07 Owned by: nobody
Priority: normal Milestone: R1/beta5
Component: Applications/PoorMan Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Problem is in cyrilic symbols

I create simple html page in Pe Editor, and save as type text/html with this contents:

<html>
	<header>
	<meta charset="utf-8">
	<title>SomeTitle</title>
	</header>
	
	<body>
	<h1>Test Page</h1>
	<p>Добро Пожаловать!</p>
	</body>

</html>

If I open this html page directly in WebPositive all looks fine, but if I start web server via PoorMan and open my local ip address, i get page with wrong symbols instead text in "p" tag (like if make page without "meta" tag to tell use utf-8)

Change History (3)

comment:1 by thebuck, 21 months ago

It must be <head>, not <header>. And maybe UTF in capitals helps?

comment:2 by waddlesplash, 21 months ago

Component: - GeneralApplications/PoorMan
Keywords: poorman html charset removed

Neither of those fixes the problem. The real issue is that PoorMan specifies a charset in the HTTP headers:

Content-Type: text/html; charset=iso-8859-1

I think WebKit ignores <meta charset> when this is present. Probably PoorMan should not specify a charset at all.

comment:3 by waddlesplash, 21 months ago

Milestone: UnscheduledR1/beta5
Resolution: fixed
Status: newclosed

That proved impossible, but I changed the character set default to UTF-8 in hrev57038.

Note: See TracTickets for help on using tickets.