PoorMan: Default to UTF-8 character set.

Ideally we would default to no character set, but
libhttpd does not seem to support that.

Fixes #18424.